--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
+appdirs==1.4.3
+boto==2.46.1
+boto3==1.4.4
+botocore==1.5.29
+dj-database-url==0.4.2
 Django==1.10
 django-crispy-forms==1.6.1
 django-markdown==0.8.4
@@ -5,6 +10,11 @@ django-markdown-deux==1.0.5
 django-pagedown==0.1.3
 django-storages==1.6.3
 djangorestframework==3.6.3
+docutils==0.14
+jmespath==0.9.3
 Markdown==2.6.8
 markdown2==2.3.4
+python-dateutil==2.6.1
 pytz==2017.2
+s3transfer==0.1.10
+six==1.10.0
