--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ django-pagedown==0.1.3
 django-storages==1.6.3
 djangorestframework==3.6.3
 docutils==0.14
+gunicorn==19.7.1
 jmespath==0.9.3
 Markdown==2.6.8
 markdown2==2.3.4
